fix(*): remove some warning code